# projectbrainstormxyz

./: .gitignore  .replit  .replitignore  app.py  pnpm-lock.yaml  pyproject.toml  replit.md
.local/: .commit_message
.replit-artifact/: artifact.edit.toml
attached_assets/: Appendix_2_-_Marketing_Landingpage_1774256420058.docx  PBS_V1A_consolidated_UI-UX_spec_(4.3)_1775359797795.docx  PRD_Mark-PBXYZ_V1A_V4.12_(4.1)_1775102284133.docx  PRD_Mark-PBXYZ_V1A_V4.12_(4.1)_1775463878695.docx  PRD_Mark-PBXYZ_V1A_V4.13_(4.7)_1775555801504.docx  PRD_Mark-PBXYZ_V1A_V4.14_(4.8)_1775634873887.docx  PRD_Mark-PBXYZ_V3.07_FINAL_1773894583833.docx  PRD_Mark-PBXYZ_V4.01_1774065003794.docx  PRD_Mark-PBXYZ_V4.03_1774763659460.docx  PROMPT_3_1775102545082.docx  PROMPT_4FIXB_1775111884779.docx  PROMPT_5_1775119847667.docx  Pasted--52-Survey-Setup-Wizard-Respondent-Cap-500-Layout-Reord_1776664791811.txt  Pasted--PROMPT-3-Mark-Driven-Discovery-Confirmation-Chat-Drive_1774844554408.txt  Pasted--PROMPT-3A-Prompt-3-Baseline-Option-B-Chat-Driven-Compl_1774847140871.txt  Pasted--PROMPT-3B-Robust-Proposal-Parsing-Combined-Confidence-_1774847804608.txt  Pasted--PROMPT-3C-Refactor-into-Proposal-Policy-Module-No-Beha_1774848332725.txt  Pasted--PROMPT-3D-Hotfix-Remove-Remaining-Save-Buttons-Make-Ch_1774850076581.txt  Pasted--PROMPT-3E-CODING-AGENT-PROMPT-WITH-SERVER-GUARD-TASK-M_1774852201965.txt  Pasted-BLOG-UX-UPGRADE-LANGUAGE-DROPDOWN-LABEL-TWEAK-Prompt-24_1774327313538.txt  Pasted-BUG-FIX-ONLY-Change-Grounding-Document-ID-format-from-D_1774249130132.txt  (+91 more)
brainstorm/: 00_FROZEN_RULES_FROM_PRD.md  (+4 more)
(+72 files in other folders)
