[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bleach>=6.3.0",
    "flask>=3.1.3",
    "fpdf2>=2.8.0",
    "openai>=2.32.0",
    "psycopg[binary]>=3.2",
    "tinycss2>=1.5.1",
    "werkzeug>=3.1.6",
]
